--- a/docs/ChangeLog.txt
+++ b/docs/ChangeLog.txt
@@ -5,6 +5,10 @@
 [ - Bug fixed (we hope)      ]
  ============================
 
+3.0.7
+[-] Removed a line of debug code that printed command line arguments to the
+    screen, always.
+-------------------------------------------------------------------------------
 3.0.6
 [+] Added error messages for attachment problems.  These include: no file was
     found for a given search string, a name that matches the search string does
