--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,18 @@
 [ - Bug fixed (we hope)      ]
  ============================
 
+3.2.3
+[+] Added -logcmds option to write the command line arguments to the log,
+    or to the screen, when also using -log option.
+[*] RFC 6152 spells out that SMTP clients and servers must use "8BITMIME"
+    when support for 8-bit octects is requested and/or supported.  However,
+    some SMTP software is responding with "250-8 BITMIME" instead, with an
+    embedded space in violation of RFC 6152.  "8 BITMIME" is now accepted as if
+    it were "8BITMIME".
+[-] If UTF-8 is selected with -charset option, and neither 8BITMIME nor
+    BINARYMIME are not supported by the server, then UTF-7 will be used
+    instead.
+-------------------------------------------------------------------------------
 3.2.2
 [-] Fixed message body handling for Unicode / UTF-8.
 [-] Fixed the -af option to read Unicode / UTF-8 files.  The change was in a
